--- a/src/index.html
+++ b/src/index.html
@@ -11,6 +11,6 @@
 </head>
 <body>
   <app-root></app-root>
-  <noscript>Please enable JavaScript to continue using this application.</noscript>
+  <script data-ad-client="ca-pub-9309082672837567" async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script>
 </body>
 </html>
