--- a/src/index.html
+++ b/src/index.html
@@ -1,6 +1,7 @@
 <!doctype html>
 <html lang="en">
 <head>
+
   <meta charset="utf-8">
   <title>Numerologic</title>
   <base href="/">
@@ -10,6 +11,7 @@
   <meta name="theme-color" content="#1976d2">
 </head>
 <body>
-  <app-root></app-root>
+  <app-root>
+  </app-root>
 </body>
 </html>
