--- a/src/index.html
+++ b/src/index.html
@@ -9,14 +9,13 @@
   <link rel="icon" type="image/x-icon" href="favicon.ico">
   <link rel="manifest" href="manifest.webmanifest">
   <meta name="theme-color" content="#1976d2">
-  <meta name="google-adsense-account" content="ca-pub-9309082672837567">
-  <!-- Yandex.RTB -->
-  <script>window.yaContextCb=window.yaContextCb||[]</script>
-  <script src="https://yandex.ru/ads/system/context.js" async></script>
 
 
-  <script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js?client=ca-pub-9309082672837567"
-          crossorigin="anonymous"></script>
+<!--  <meta name="google-adsense-account" content="ca-pub-9309082672837567">-->
+
+
+<!--  <script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js?client=ca-pub-9309082672837567"-->
+<!--          crossorigin="anonymous"></script>-->
 <!--  <script>-->
 <!--      (adsbygoogle = window.adsbygoogle || []).push({-->
 <!--          google_ad_client: "ca-pub-9309082672837567", //google publisher id-->
