[AN-009] ads is work

--- a/src/index.html
+++ b/src/index.html
@@ -16,5 +16,14 @@
 <body>
   <app-root>
   </app-root>
+  <div id="yandex_rtb_R-A-3233177-1"></div>
+  <script>
+    window.yaContextCb.push(()=>{
+      Ya.Context.AdvManager.render({
+        "blockId": "R-A-3233177-1",
+        "renderTo": "yandex_rtb_R-A-3233177-1"
+      })
+    })
+  </script>
 </body>
 </html>
