--- a/src/index.html
+++ b/src/index.html
@@ -1,29 +1,16 @@
 <!doctype html>
 <html lang="en">
 <head>
-
   <meta charset="utf-8">
-  <title>Numerologic</title>
+  <title>spiderman-numer</title>
   <base href="/">
   <meta name="viewport" content="width=device-width, initial-scale=1">
   <link rel="icon" type="image/x-icon" href="favicon.ico">
   <link rel="manifest" href="manifest.webmanifest">
   <meta name="theme-color" content="#1976d2">
-  <!-- Yandex Native Ads -->
-  <script>window.yaContextCb=window.yaContextCb||[]</script>
-  <script src="https://yandex.ru/ads/system/context.js" async></script>
 </head>
 <body>
   <app-root>
   </app-root>
-  <div id="yandex_rtb_R-A-3233177-1"></div>
-  <script>
-    window.yaContextCb.push(()=>{
-      Ya.Context.AdvManager.render({
-        "blockId": "R-A-3233177-1",
-        "renderTo": "yandex_rtb_R-A-3233177-1"
-      })
-    })
-  </script>
 </body>
 </html>
