--- a/src/index.html
+++ b/src/index.html
@@ -9,7 +9,7 @@
   <link rel="manifest" href="manifest.webmanifest">
   <meta name="theme-color" content="#1976d2">
 </head>
-<body>
+<body class="container-background-color">
   <app-root>
   </app-root>
 </body>
