[AN-016] добавил яндекс рекламу сверху

--- a/src/index.html
+++ b/src/index.html
@@ -14,6 +14,15 @@
   <script src="https://yandex.ru/ads/system/context.js" async></script>
 </head>
 <body>
+<div id="yandex_rtb_R-A-3233177-3"></div>
+<script>
+  window.yaContextCb.push(() => {
+    Ya.Context.AdvManager.render({
+      "blockId": "R-A-3233177-3",
+      "renderTo": "yandex_rtb_R-A-3233177-3"
+    })
+  })
+</script>
   <app-root>
   </app-root>
   <div id="yandex_rtb_R-A-3233177-1"></div>
