[AN-020] не много сменил дизайн, добавил рекламу

--- a/src/index.html
+++ b/src/index.html
@@ -10,7 +10,7 @@
   <link rel="manifest" href="manifest.webmanifest">
   <meta name="theme-color" content="#1976d2">
   <!-- Yandex Native Ads -->
-  <script>window.yaContextCb=window.yaContextCb||[]</script>
+  <script>window.yaContextCb = window.yaContextCb || []</script>
   <script src="https://yandex.ru/ads/system/context.js" async></script>
 </head>
 <body>
@@ -23,16 +23,87 @@
     })
   })
 </script>
-  <app-root>
-  </app-root>
-  <div id="yandex_rtb_R-A-3233177-1"></div>
+
+
+<!--<div class="row">-->
+
+<!--  <div class="col-md-1 ">-->
+<!--  </div>-->
+
+<!--  <div class="col-md-2">-->
+<!--    <div id="yandex_rtb_R-A-3233177-5"></div>-->
+<!--    <script>-->
+<!--      window.yaContextCb.push(() => {-->
+<!--        Ya.Context.AdvManager.render({-->
+<!--          "blockId": "R-A-3233177-5",-->
+<!--          "renderTo": "yandex_rtb_R-A-3233177-5"-->
+<!--        })-->
+<!--      })-->
+<!--    </script>-->
+<!--  </div>-->
+<!--  <div class="col-md-1 ">-->
+<!--  </div>-->
+
+<!--  <div class="col-md-4">-->
+<!--    <div class="d-flex justify-content-center">-->
+<div class="mt-5">
+      <app-root>
+      </app-root>
+</div>
+<!--    </div>-->
+<!--  </div>-->
+
+
+<!--  <div class="col-md-1 ">-->
+<!--  </div>-->
+
+<!--  <div class="col-md-2 ">-->
+<!--    &lt;!&ndash; Yandex.RTB R-A-3233177-6 &ndash;&gt;-->
+<!--    <div id="yandex_rtb_R-A-3233177-6"></div>-->
+<!--    <script>-->
+<!--      window.yaContextCb.push(() => {-->
+<!--        Ya.Context.AdvManager.render({-->
+<!--          "blockId": "R-A-3233177-6",-->
+<!--          "renderTo": "yandex_rtb_R-A-3233177-6"-->
+<!--        })-->
+<!--      })-->
+<!--    </script>-->
+<!--  </div>-->
+<!--  <div class="col-md-1 ">-->
+<!--  </div>-->
+
+
+  <!-- Yandex.RTB R-A-3233177-4 -->
   <script>
-    window.yaContextCb.push(()=>{
+    window.yaContextCb.push(() => {
       Ya.Context.AdvManager.render({
-        "blockId": "R-A-3233177-1",
-        "renderTo": "yandex_rtb_R-A-3233177-1"
+        "blockId": "R-A-3233177-4",
+        "type": "floorAd",
+        "platform": "desktop"
       })
     })
   </script>
+
+<!-- Yandex.RTB R-A-3233177-7 -->
+<script>
+  window.yaContextCb.push(() => {
+    Ya.Context.AdvManager.render({
+      "blockId": "R-A-3233177-7",
+      "type": "floorAd",
+      "platform": "touch"
+    })
+  })
+</script>
+
+
+  <!--  <div id="yandex_rtb_R-A-3233177-1"></div>-->
+  <!--  <script>-->
+  <!--    window.yaContextCb.push(() => {-->
+  <!--      Ya.Context.AdvManager.render({-->
+  <!--        "blockId": "R-A-3233177-1",-->
+  <!--        "renderTo": "yandex_rtb_R-A-3233177-1"-->
+  <!--      })-->
+  <!--    })-->
+  <!--  </script>-->
 </body>
 </html>
