[AN-028] - перевел на английски

--- a/src/index.html
+++ b/src/index.html
@@ -2,15 +2,38 @@
 <html lang="en">
 <head>
   <meta charset="utf-8">
-  <title>spiderman-numer</title>
+  <title>Numerology</title>
   <base href="/">
   <meta name="viewport" content="width=device-width, initial-scale=1">
   <link rel="icon" type="image/x-icon" href="favicon.ico">
   <link rel="manifest" href="manifest.webmanifest">
   <meta name="theme-color" content="#1976d2">
+  <script>window.yaContextCb=window.yaContextCb||[]</script>
+  <script src="https://yandex.ru/ads/system/context.js" async></script>
 </head>
 <body class="container-background-color">
   <app-root>
   </app-root>
+
+  <script>
+    window.yaContextCb.push(() => {
+      Ya.Context.AdvManager.render({
+        "blockId": "R-A-10376601-1",
+        "type": "floorAd",
+        "platform": "desktop"
+      })
+    })
+  </script>
+
+  <!-- Yandex.RTB R-A-10376601-2 -->
+  <script>
+    window.yaContextCb.push(() => {
+      Ya.Context.AdvManager.render({
+        "blockId": "R-A-10376601-2",
+        "type": "floorAd",
+        "platform": "touch"
+      })
+    })
+  </script>
 </body>
 </html>
